Fixes the issue with the gap below the images. Thanks to @SimonSapin for the CSS insights!

--- a/css/style.css
+++ b/css/style.css
@@ -35,5 +35,5 @@ main {
 }
 
 #mosaic img {
-  display: inline-block;
+  vertical-align: bottom;
 }
